--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,9 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="{{ site.description }}">
 
-		<title>GSEA</title>
+		<title>{{ site.name }}</title>
 
 		<link rel="icon" type="image/png" href="assets/favicon.png">
 
@@ -35,11 +36,3 @@
 		</nav>
 
 		<div id="main">
-			<h1>The Grinnell Space Exploration Agency</h1>
-		</div>
-
-		<!-- JS -->
-		<script src="js/lib.js"></script>
-		<script src="js/main.js"></script>
-	</body>
-</html>
