--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 		</div>
 
 		<!-- JS -->
-		<script src="js/lib.js"></script>
-		<script src="js/main.js"></script>
+		<script src="/js/lib.js"></script>
+		<script src="/js/main.js"></script>
 	</body>
 </html>
