--- a/css/main.css
+++ b/css/main.css
@@ -88,4 +88,13 @@ div#main {
 	padding: 0 16px 24px 16px;
 	width: 100%;
 	box-sizing: border-box;
+	line-height: 1.4;
+}
+
+a {
+	color: #c00;
+	text-decoration: none;
+}
+a:hover {
+	text-decoration: underline;
 }
