--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,9 @@
 		</div>
 
+		<footer>
+		Grinnell Space Exploration Agency 2015.  All rights reserved.
+		</footer>
+
 		<!-- JS -->
 		<script src="/js/lib.js"></script>
 		<script src="/js/main.js"></script>
