--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,7 @@
+			<footer>
+			&copy; Grinnell Space Exploration Agency, 2015.  All rights reserved.
+			</footer>
 		</div>
-
-		<footer>
-		Grinnell Space Exploration Agency 2015.  All rights reserved.
-		</footer>
 
 		<!-- JS -->
 		<script src="/js/lib.js"></script>
