--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
 	</head>
 	<body>
 		<nav>
-			<a id="brand" href="{{ site.url }}">
+			<a id="brand" href="/">
 					<img src="/assets/logo_allwhite_128.png">
 			</a>
 			<span class="spacer"></span>	
