--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,6 +24,7 @@
 				<a>About</a>
 				<div class="dropdown">
 					<a href="/about">GSEA</a>
+					<a href="/about/organization.html">Organization</a>
 					<a href="http://www.grinnell.edu">Grinnell College</a>
 				</div>
 			</span>
@@ -33,6 +34,9 @@
 					<a href="/missions/nearspaceballoon.html">Near-Space Balloon</a>
 					<a href="/missions">All Missions</a>
 				</div>
+			</span>
+			<span class="nav" style="width: 156px">
+				<a href="/administration">Administration</a>
 			</span>
 		</nav>
 
