--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ NAVBAR
 */
 
 nav {
-	width: 100%;
+	min-width: 100%;
 	height: 64px;
 	background-color: #d00;
 	position: fixed;
@@ -40,6 +40,7 @@ nav span.nav {
 	text-align: center;
 	line-height: 60px;
 	transition: all 100ms;
+	flex-shrink: 0;
 }
 
 nav span.nav > a {
