--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
 					<img src="/assets/logo_allwhite_128.png">
 			</a>
 			<span class="spacer"></span>	
-			<span class="nav">
+			<span class="nav big">
 				<a>About</a>
 				<div class="dropdown">
 					<a href="/about">GSEA</a>
@@ -28,15 +28,29 @@
 					<a href="http://www.grinnell.edu">Grinnell College</a>
 				</div>
 			</span>
-			<span class="nav">
+			<span class="nav big">
 				<a>Missions</a>
 				<div class="dropdown">
 					<a href="/missions/nearspaceballoon.html">Near-Space Balloon</a>
 					<a href="/missions">All Missions</a>
 				</div>
 			</span>
-			<span class="nav" style="width: 156px">
+			<span class="nav big" style="width: 156px">
 				<a href="/administration">Administration</a>
+			</span>
+
+			<span class="nav mobile">
+				<a>&#9776;&nbsp;&nbsp;Menu</a>
+				<div class="dropdown">
+					<h3>About</h3>
+					<a href="/about"><GSEA</a>
+					<a href="/about/organization.html">Organization</a>
+					<a href="http://www.grinnell.edu">Grinnell College</a>
+					<h3>Missions</h3>
+					<a href="/missions/nearspaceballoon.html">Near-Space Balloon</a>
+					<a href="/missions">All Missions</a>
+					<h3 style="padding: 0;"><a href="/administration">Administration</a></h3>
+				</div>
 			</span>
 		</nav>
 
