--- a/css/main.css
+++ b/css/main.css
@@ -47,11 +47,37 @@ nav span.nav > a {
 	text-decoration: none;
 	font-size: 24px;
 	color: white;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	-webkit-tap-highlight-color: transparent; /* For some Androids */
 }
 
 nav span.nav:hover {
 	background-color: #f00;
 }
+
+nav span.mobile {
+	display: none;
+}
+
+nav span.mobile .dropdown a {
+	line-height: 48px;
+	margin: 4px 0;
+}
+nav span.mobile .dropdown h3 {
+	padding: 0 16px;
+	color: white;
+	line-height: 1;
+}
+
+@media screen and (max-width: 540px) {
+	nav span.big {
+		display: none;
+	}
+	nav span.mobile {
+		display: block;
+	}
+}
+
 
 nav span.nav .dropdown {
 	display: none;
