updated mobile menu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,7 +40,7 @@
 			</span>
 
 			<span class="nav mobile">
-				<a>&#9776;&nbsp;&nbsp;Menu</a>
+				<a>Menu</a>
 				<div class="dropdown">
 					<h3>About</h3>
 					<a href="/about"><GSEA</a>
