--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,8 @@ nav span.mobile {
 nav span.mobile .dropdown {
 	left: -64px !important;
 	top: 0 !important;
+	overflow: auto;
+	max-height: 100vh;
 }
 nav span.mobile .dropdown a {
 	line-height: 48px;
