--- a/css/main.css
+++ b/css/main.css
@@ -192,9 +192,10 @@ div#news .item .text {
 
 div#news .item-text {
 	font-size: 18px;
-	background-color: #ddd;
+	background-color: #eee;
 	padding: 0 16px;
 	line-height: 1.8;
+	box-shadow: inset 0 0 24px rgba(0, 0, 0, 0.05);
 }
 
 iframe {
