--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,7 +43,7 @@
 				<a>Menu</a>
 				<div class="dropdown">
 					<h3>About</h3>
-					<a href="/about"><GSEA</a>
+					<a href="/about">GSEA</a>
 					<a href="/about/organization.html">Organization</a>
 					<a href="http://www.grinnell.edu">Grinnell College</a>
 					<h3>Missions</h3>
