--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,7 +56,7 @@
 					<hr>
 					<a href="/administration">Administration</a>
 					<hr>
-					<a href="/administration">Blog</a>
+					<a href="/blog">Blog</a>
 				</div>
 			</span>
 		</nav>
