--- a/css/main.sass
+++ b/css/main.sass
@@ -96,7 +96,7 @@ nav
 		color: white
 			line-height: 1
 		
-	@media screen and (max-width: 540px)
+	@media screen and (max-width: 600px)
 		span.big
 			display: none
 		span.mobile
@@ -185,6 +185,11 @@ div#news
 			font-size: 75%
 			margin: 1em
 
+	@media screen and (max-width: 900px)
+		.item-text
+			max-width: initial
+
+
 iframe
 	width: 100%
 	border: none
@@ -222,8 +227,8 @@ li.post
 	
 	.paginatorlink
 		display: inline-block
-		width: 6em
-		margin: 1em
+		width: 5.5em
+		margin: 0.75em
 
 /*
  * FOOTER
