improved drop down menu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,14 +46,20 @@
 				<a>Menu</a>
 				<div class="dropdown">
 					<h3>About</h3>
-					<a href="/about">GSEA</a>
-					<a href="/about/organization.html">Organization</a>
-					<a href="http://www.grinnell.edu">Grinnell College</a>
+					<div class="subdrop" id="s_about">
+						<a href="/about">GSEA</a>
+						<a href="/about/organization.html">Organization</a>
+						<a href="http://www.grinnell.edu">Grinnell College</a>
+					</div>
 					<hr>
+
 					<h3>Missions</h3>
-					<a href="/missions/nearspaceballoon.html">Near-Space Balloon</a>
-					<a href="/missions">All Missions</a>
+					<div class="subdrop" id="s_missions">
+						<a href="/missions/nearspaceballoon.html">Near-Space Balloon</a>
+						<a href="/missions">All Missions</a>
+					</div>
 					<hr>
+
 					<a href="/administration">Administration</a>
 					<hr>
 					<a href="/blog">Blog</a>
