more menu improvements

--- a/css/main.sass
+++ b/css/main.sass
@@ -99,8 +99,11 @@ nav
 				line-height: 1
 				cursor: pointer
 
-			.subdrop
-				display: none
+			h3:after
+				content: "\25bc"
+				float: right
+				position: relative
+				right: 2em
 		
 	@media screen and (max-width: 600px)
 		span.big
