--- a/css/main.sass
+++ b/css/main.sass
@@ -117,8 +117,8 @@ nav
 		position: absolute
 
 		* 
-			-webkit-touch-callout: none   
-			-webkit-text-size-adjust: none  
+			-webkit-touch-callout: none		
+			-webkit-text-size-adjust: none	
 			-webkit-tap-highlight-color: transparent 
 			-webkit-tap-highlight-color: rgba(0, 0, 0, 0)
 			-webkit-user-select: none					
@@ -251,6 +251,29 @@ li.post
 		display: inline-block
 		width: 5.5em
 		margin: 0.75em
+
+input
+	font-size: 16px
+	padding:	4px
+	outline: none
+	border: 1px solid #d00
+	font-family: $font-stack
+
+button
+	border: none
+	outline: none
+	padding: 6px 12px
+	margin: 8px
+	font-size: 16px
+	background-color: #d00
+	color: white
+	border-radius: 2px
+	font-family: $font-stack
+	transition: all 300ms
+
+button:hover
+	background-color: #e00
+
 
 /*
  * FOOTER
