fixed mobile problem

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -71,7 +71,7 @@
 				</div>
 			</span>
 			<span class="fill"></span>
-			<span class="nav big">
+			<span class="nav">
 				<a id="loginlink" href="/login?redirect={{ page.url }}" class="link">Login</a>
 			</span>
 		</nav>
