--- a/css/main.sass
+++ b/css/main.sass
@@ -16,7 +16,7 @@ body
 nav
 	min-width: 100%
 	height: $navbar-height
-	background-color: #d00
+	background-color: rgba(100, 100, 100, 0.9)
 	position: fixed
 	display: flex
 	flex-direction: row
