--- a/css/main.sass
+++ b/css/main.sass
@@ -48,11 +48,11 @@ nav
 		color: white
 
 	span.nav:hover
-		background-color: #f00
+		background-color: #e00
 
 	span.nav .dropdown
 		display: none
-		background-color: #f00
+		background-color: #e00
 		box-sizing: border-box
 		position: relative
 		left: -16px
