--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 			<footer>
 			&copy; Grinnell Space Exploration Agency, 2015.  All rights reserved.
+			<a href="mailto:gsea@grinnell.edu">Contact Us</a>
 			</footer>
 		</div>
 	</body>
