--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,7 @@
 		<title>{{ page.title }}</title>
 
 		<link rel="icon" type="image/png" href="/assets/favicon.png">
+		<link rel="manifest" href="/manifest.json">
 
 		<link href='https://fonts.googleapis.com/css?family=Lato:300,700,300italic,700italic' 
 				rel='stylesheet' type='text/css'>
