--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,7 +50,7 @@
 			</span>
 
 			<span class="nav mobile">
-				<a>Menu</a>
+				<a href="#">Menu</a>
 				<div class="dropdown">
 					<h3>About</h3>
 					<div class="subdrop" id="s_about">
