--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
 	<body>
 		<nav>
 			<a id="brand" href="/">
-					<img src="/assets/logo_allwhite_128.png">
+					<img alt="logo" src="/assets/logo_allwhite_128.png">
 			</a>
 			<span class="spacer"></span>	
 			<span class="nav big">
