blog layout updates

--- a/css/main.sass
+++ b/css/main.sass
@@ -223,6 +223,8 @@ div#news
 		.item-text
 			max-width: initial
 
+h1
+	margin: 12px 0 4px
 
 iframe
 	width: 100%
@@ -266,6 +268,10 @@ li.post
 		display: inline-block
 		width: 5.5em
 		margin: 0.75em
+
+.blogdate 
+	color: #aaa
+
 
 .restricted
 	display: none
