--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,7 @@
 		<script src="/js/lib.js"></script>
 		<script type="text/javascript" src="/js/sha256.js"></script>
 		<script src="/js/main.js"></script>
+		<script type='text/javascript' src='//dsms0mj1bbhn4.cloudfront.net/assets/pub/shareaholic.js' data-shr-siteid='131e4a48c63ae4b25359ca4abd3f2def' data-cfasync='false' async='async'></script>
 	</head>
 	<body>
 		<nav>
