--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,12 @@
 		<link href='https://fonts.googleapis.com/css?family=Lato:300,700,300italic,700italic' 
 				rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="/css/main.css">
+
+		<!-- JS -->
+		<script src="/js/logindata.js"></script>
+		<script src="/js/lib.js"></script>
+		<script type="text/javascript" src="/js/sha256.js"></script>
+		<script src="/js/main.js"></script>
 	</head>
 	<body>
 		<nav>
