--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 			<footer>
-			&copy; Grinnell Space Exploration Agency, 2015.  All rights reserved.
-			<a href="mailto:gsea@grinnell.edu">Contact Us</a>
+			&copy; 2015 Grinnell Space Exploration Agency. 
+			<a href="/privacy">Privacy Policy</a>.
+			<a href="mailto:gsea@grinnell.edu">Contact Us</a>.
 			</footer>
 		</div>
 
