--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 			<footer>
-			&copy; 2015 Grinnell Space Exploration Agency. 
-			<a href="/privacy">Privacy Policy</a>.
+			&copy; 2015 Grinnell Space Exploration Agency.  &nbsp;&nbsp;
+			<a href="/privacy">Privacy Policy</a>.  &nbsp;&nbsp;
 			<a href="mailto:gsea@grinnell.edu">Contact Us</a>.
 			</footer>
 		</div>
