blog post editor

--- a/css/main.sass
+++ b/css/main.sass
@@ -280,18 +280,24 @@ li.post
 	color: red
 	display: none
 
-input
+input, textarea
 	font-size: 16px
 	padding:	4px
 	outline: none
+	min-width: 200px
 	border: 1px solid #d00
+	margin-top: 8px
 	font-family: $font-stack
+
+textarea
+	width: 100%
+	min-height: 12em
 
 button
 	border: none
 	outline: none
 	padding: 6px 12px
-	margin: 8px
+	margin: 8px 0
 	font-size: 16px
 	background-color: #d00
 	color: white
