working on passwords and auth

--- a/css/main.sass
+++ b/css/main.sass
@@ -280,7 +280,7 @@ li.post
 	color: red
 	display: none
 
-input, textarea
+input, textarea, select
 	font-size: 16px
 	padding:	4px
 	outline: none
