--- a/css/main.sass
+++ b/css/main.sass
@@ -175,7 +175,7 @@ div#news
 	.item
 		margin: 12px
 		position: relative
-		flex-grow: 1
+		flex: 1 1 35%
 		min-width: 240px
 		height: 320px
 		overflow: hidden
@@ -186,6 +186,7 @@ div#news
 			display: block
 			min-width: 100%
 			max-height: 100%
+
 		.text
 			position: absolute
 			display: block
@@ -203,7 +204,7 @@ div#news
 		background-color: #eee
 		padding: 0 16px
 		line-height: 1.8
-		max-width: 360px
+		max-width: 360px !important
 		box-shadow: inset 0 0 24px rgba(0, 0, 0, 0.05)
 
 		a 
@@ -218,6 +219,14 @@ div#news
 			text-transform: uppercase
 			font-size: 75%
 			margin: 1em
+
+	.item[flex2]
+		flex-grow: 2
+	.item[flex5]
+		flex-grow: 5
+	.item[flex10]
+		flex-grow: 10
+
 
 	@media screen and (max-width: 900px)
 		.item-text
