--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,6 +15,7 @@
 		<link rel="icon" type="image/png" href="/assets/favicon.png">
 		<link rel="manifest" href="/manifest.json">
 
+		<!-- CSS -->
 		<link href='https://fonts.googleapis.com/css?family=Lato:300,700,300italic,700italic' 
 				rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="/css/main.css">
