--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,7 +38,7 @@
 			</a>
 			<span class="spacer"></span>	
 			<span class="nav big">
-				<a href="about">About</a>
+				<a href="/about/">About</a>
 				<div class="dropdown">
 					<a href="/about">GSEA</a>
 					<a href="/about/organization.html">Organization</a>
