--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,23 +40,23 @@
 			<span class="nav big">
 				<a href="/about/">About</a>
 				<div class="dropdown">
-					<a href="/about">GSEA</a>
+					<a href="/about/">GSEA</a>
 					<a href="/about/organization.html">Organization</a>
 					<a href="http://www.grinnell.edu">Grinnell College</a>
 				</div>
 			</span>
 			<span class="nav big">
-				<a href="/missions">Missions</a>
+				<a href="/missions/">Missions</a>
 				<div class="dropdown">
 					<a href="/missions/nearspaceballoon.html">Near-Space Balloon</a>
 					<a href="/missions">All Missions</a>
 				</div>
 			</span>
 			<span class="nav big" style="width: 156px">
-				<a href="/administration" class="link">Administration</a>
+				<a href="/administration/" class="link">Administration</a>
 			</span>
 			<span class="nav big">
-				<a href="/blog" class="link">Blog</a>
+				<a href="/blog/" class="link">Blog</a>
 			</span>
 
 			<span class="nav mobile">
@@ -64,7 +64,7 @@
 				<div class="dropdown">
 					<h3>About</h3>
 					<div class="subdrop" id="s_about">
-						<a href="/about">GSEA</a>
+						<a href="/about/">GSEA</a>
 						<a href="/about/organization.html">Organization</a>
 						<a href="http://www.grinnell.edu">Grinnell College</a>
 					</div>
@@ -73,18 +73,18 @@
 					<h3>Missions</h3>
 					<div class="subdrop" id="s_missions">
 						<a href="/missions/nearspaceballoon.html">Near-Space Balloon</a>
-						<a href="/missions">All Missions</a>
+						<a href="/missions/">All Missions</a>
 					</div>
 					<hr>
 
-					<a href="/administration">Administration</a>
+					<a href="/administration/">Administration</a>
 					<hr>
-					<a href="/blog">Blog</a>
+					<a href="/blog/">Blog</a>
 				</div>
 			</span>
 			<span class="fill"></span>
 			<span class="nav">
-				<a id="loginlink" href="/login?redirect={{ page.url }}" class="link">Login</a>
+				<a id="loginlink" href="/login/?redirect={{ page.url }}" class="link">Login</a>
 			</span>
 		</nav>
 
