--- a/_includes/header.html
+++ b/_includes/header.html
@@ -49,7 +49,7 @@
 				<a href="/missions/">Missions</a>
 				<div class="dropdown">
 					<a href="/missions/nearspaceballoon.html">Near-Space Balloon</a>
-					<a href="/missions">All Missions</a>
+					<a href="/missions/">All Missions</a>
 				</div>
 			</span>
 			<span class="nav big" style="width: 156px">
