--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,7 +3,7 @@
 	{{ page.title }}
 </h1>
 <span class="blogdate">
-	Posted on {{ page.date | date: '%B %d, %Y' }} by {{ page.author }}
+	Posted on {{ page.date | date: '%A, %B %-d, %Y' }} by {{ page.author }}
 </span>
 {{ content }}
 {% include scripts.html %}
