--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,7 +53,7 @@
 			<span class="nav big">
 				<a href="/missions/">Missions</a>
 				<div class="dropdown">
-					<a href="/missions/nearspaceballoon.html">Near-Space Balloon</a>
+					<a href="/missions/nearspaceballoon.html">Transcendence Balloon</a>
 					<a href="/missions/">All Missions</a>
 				</div>
 			</span>
@@ -77,7 +77,7 @@
 
 					<h3>Missions</h3>
 					<div class="subdrop" id="s_missions">
-						<a href="/missions/nearspaceballoon.html">Near-Space Balloon</a>
+						<a href="/missions/nearspaceballoon.html">Transcendence Balloon</a>
 						<a href="/missions/">All Missions</a>
 					</div>
 					<hr>
