--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width">
+        <meta name="theme-color" content="#dd0000">
 		<meta name="description" content="{{ site.description }}">
 		
 		{% if jekyll.environment == "production" %}
