layout updates, copyright update, styling fixes

--- a/css/main.sass
+++ b/css/main.sass
@@ -1,13 +1,14 @@
 ---
 ---
 
-$font-stack: "Lato"
+$font-stack: "Lato", sans-serif
 $navbar-height: 56px
 
 body
     background-color: #fcfcfc
     font-family: $font-stack
     margin: 0
+    font-weight: lighter
 
 /*
  * NAVBAR
