--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -6,5 +6,14 @@
 	Posted on {{ page.date | date: '%A, %B %-d, %Y' }} by {{ page.author }}
 </span>
 {{ content }}
+<hr />
+<span class="post-navigation">
+    {% if page.previous.url %}
+        <a class='prev' href="{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
+    {% endif %}
+    {% if page.next.url %}
+        <a class='next' href="{{ page.next.url }}">{{ page.next.title }} &raquo;</a>
+    {% endif %}
+</span>
 {% include scripts.html %}
 {% include footer.html %}
