--- a/css/main.sass
+++ b/css/main.sass
@@ -325,6 +325,14 @@ button > a
 button > a:hover
     text-decoration: none
 
+.post-navigation > a
+    display: inline-block
+    width: 49.5%
+.post-navigation > .prev
+    text-align: left
+.post-navigation > .next
+    text-align: right
+
 /*
  * FOOTER
  */
