--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -2,5 +2,5 @@
 <script type="text/javascript" src="/js/sha256.js"></script>
 <script src="/js/main.js"></script>
 {% for s in page.scripts %}
-<script src="/js/{{ s }}.js" async defer></script>
+<script src="/js/{{ s }}.js" defer></script>
 {% endfor %}
