--- a/css/main.sass
+++ b/css/main.sass
@@ -291,6 +291,12 @@ li.post
     color: red
     display: none
 
+#gantt
+    width: 100%
+    
+    *
+        font-family: inherit !important
+
 input, textarea, select
     font-size: 16px
     padding:	4px
