better gantt chart

--- a/css/main.sass
+++ b/css/main.sass
@@ -293,6 +293,9 @@ li.post
 
 #gantt
     width: 100%
+    min-width: 700px
+    padding-right: 16px
+    padding-bottom: 8px
     
     *
         font-family: inherit !important
