changed .html to / for major urls

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,14 +47,14 @@
 				<a href="/about/">About</a>
 				<div class="dropdown">
 					<a href="/about/">GSEA</a>
-					<a href="/about/organization.html">Organization</a>
+					<a href="/about/organization">Organization</a>
 					<a href="http://www.grinnell.edu">Grinnell College</a>
 				</div>
 			</span>
 			<span class="nav big">
 				<a href="/missions/">Missions</a>
 				<div class="dropdown">
-					<a href="/missions/nearspaceballoon.html">Transcendence Balloon</a>
+					<a href="/missions/nearspaceballoon">Transcendence Balloon</a>
 					<a href="/missions/">All Missions</a>
 				</div>
 			</span>
@@ -71,14 +71,14 @@
 					<h3>About</h3>
 					<div class="subdrop" id="s_about">
 						<a href="/about/">GSEA</a>
-						<a href="/about/organization.html">Organization</a>
+						<a href="/about/organization">Organization</a>
 						<a href="http://www.grinnell.edu">Grinnell College</a>
 					</div>
 					<hr>
 
 					<h3>Missions</h3>
 					<div class="subdrop" id="s_missions">
-						<a href="/missions/nearspaceballoon.html">Transcendence Balloon</a>
+						<a href="/missions/nearspaceballoon">Transcendence Balloon</a>
 						<a href="/missions/">All Missions</a>
 					</div>
 					<hr>
