improved admin page

--- a/css/main.sass
+++ b/css/main.sass
@@ -342,6 +342,12 @@ button > a:hover
 .post-navigation > .next
     text-align: right
 
+table.links
+    width: 100%
+table.links td
+    vertical-align: top
+    padding-bottom: 1.5em
+
 /*
  * FOOTER
  */
