fix tooltip bg issue

--- a/css/main.sass
+++ b/css/main.sass
@@ -299,6 +299,7 @@ li.post
     
     *
         font-family: inherit !important
+        filter: none
 
 input, textarea, select
     font-size: 16px
