--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,8 +22,7 @@
 		<link rel="manifest" href="/manifest.json">
 
 		<!-- CSS -->
-		<link href='https://fonts.googleapis.com/css?family=Lato:300,700,300italic,700italic' 
-				rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,700" rel="stylesheet">
 		<link rel="stylesheet" href="/css/main.css">
 
 		<!-- JS -->
