--- a/css/main.sass
+++ b/css/main.sass
@@ -300,6 +300,10 @@ li.post
     *
         font-family: inherit !important
         filter: none
+        font-weight: 400
+        
+    svg > g > text
+        color: #444
 
 input, textarea, select
     font-size: 16px
