color vs fill fix

--- a/css/main.sass
+++ b/css/main.sass
@@ -303,7 +303,7 @@ li.post
         font-weight: 400
         
     svg > g > text
-        color: #444
+        fill: #444
 
 input, textarea, select
     font-size: 16px
